--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -94,9 +94,9 @@
 
             <div class="spacer">&nbsp;</div>
 
-            <div class="game game-top <%= 'winner' if pick&.winner_id == character_a&.id %> <%= pick&.winner_id == character_a.id ? (pick&.winner_id == match&.winner_id ? 'correct-pick' : 'incorrect-pick') : nil %>"><%= character_a&.seed(@competition) ? "(#{character_a&.seed(@competition)}) #{character_a&.name}" : character_a&.name %></div>
+            <div class="game game-top <%= 'winner' if pick&.winner_id == character_a&.id %> <%= pick&.winner_id == character_a&.id ? (pick&.winner_id == match&.winner_id ? 'correct-pick' : 'incorrect-pick') : nil %>"><%= character_a&.seed(@competition) ? "(#{character_a&.seed(@competition)}) #{character_a&.name}" : character_a&.name %></div>
             <div class="game game-spacer">&nbsp;</div>
-            <div class="game game-bottom <%= 'winner' if pick&.winner_id == character_b&.id %> <%= pick&.winner_id == character_b.id ? (pick&.winner_id == match&.winner_id ? 'correct-pick' : 'incorrect-pick') : nil %>"><%= character_b&.seed(@competition) ? "(#{character_b&.seed(@competition)}) #{character_b&.name}" : character_b&.name %></div>
+            <div class="game game-bottom <%= 'winner' if pick&.winner_id == character_b&.id %> <%= pick&.winner_id == character_b&.id ? (pick&.winner_id == match&.winner_id ? 'correct-pick' : 'incorrect-pick') : nil %>"><%= character_b&.seed(@competition) ? "(#{character_b&.seed(@competition)}) #{character_b&.name}" : character_b&.name %></div>
 
             <div class="spacer">&nbsp;</div>
           <% end %>
@@ -109,9 +109,9 @@
 
             <div class="spacer">&nbsp;</div>
 
-            <div class="game game-top <%= 'winner' if pick&.winner_id == character_a&.id %> <%= pick&.winner_id == character_a.id ? (pick&.winner_id == match&.winner_id ? 'correct-pick' : 'incorrect-pick') : nil %>"><%= character_a&.seed(@competition) ? "(#{character_a&.seed(@competition)}) #{character_a&.name}" : character_a&.name %></div>
+            <div class="game game-top <%= 'winner' if pick&.winner_id == character_a&.id %> <%= pick&.winner_id == character_a&.id ? (pick&.winner_id == match&.winner_id ? 'correct-pick' : 'incorrect-pick') : nil %>"><%= character_a&.seed(@competition) ? "(#{character_a&.seed(@competition)}) #{character_a&.name}" : character_a&.name %></div>
             <div class="game game-spacer">&nbsp;</div>
-            <div class="game game-bottom <%= 'winner' if pick&.winner_id == character_b&.id %> <%= pick&.winner_id == character_b.id ? (pick&.winner_id == match&.winner_id ? 'correct-pick' : 'incorrect-pick') : nil %>"><%= character_b&.seed(@competition) ? "(#{character_b&.seed(@competition)}) #{character_b&.name}" : character_b&.name %></div>
+            <div class="game game-bottom <%= 'winner' if pick&.winner_id == character_b&.id %> <%= pick&.winner_id == character_b&.id ? (pick&.winner_id == match&.winner_id ? 'correct-pick' : 'incorrect-pick') : nil %>"><%= character_b&.seed(@competition) ? "(#{character_b&.seed(@competition)}) #{character_b&.name}" : character_b&.name %></div>
 
             <div class="spacer">&nbsp;</div>
           <% end %>
@@ -124,9 +124,9 @@
 
             <div class="spacer">&nbsp;</div>
 
-            <div class="game game-top <%= 'winner' if pick&.winner_id == character_a&.id %> <%= pick&.winner_id == character_a.id ? (pick&.winner_id == match&.winner_id ? 'correct-pick' : 'incorrect-pick') : nil %>"><%= character_a&.seed(@competition) ? "(#{character_a&.seed(@competition)}) #{character_a&.name}" : character_a&.name %></div>
+            <div class="game game-top <%= 'winner' if pick&.winner_id == character_a&.id %> <%= pick&.winner_id == character_a&.id ? (pick&.winner_id == match&.winner_id ? 'correct-pick' : 'incorrect-pick') : nil %>"><%= character_a&.seed(@competition) ? "(#{character_a&.seed(@competition)}) #{character_a&.name}" : character_a&.name %></div>
             <div class="game game-spacer">&nbsp;</div>
-            <div class="game game-bottom <%= 'winner' if pick&.winner_id == character_b&.id %> <%= pick&.winner_id == character_b.id ? (pick&.winner_id == match&.winner_id ? 'correct-pick' : 'incorrect-pick') : nil %>"><%= character_b&.seed(@competition) ? "(#{character_b&.seed(@competition)}) #{character_b&.name}" : character_b&.name %></div>
+            <div class="game game-bottom <%= 'winner' if pick&.winner_id == character_b&.id %> <%= pick&.winner_id == character_b&.id ? (pick&.winner_id == match&.winner_id ? 'correct-pick' : 'incorrect-pick') : nil %>"><%= character_b&.seed(@competition) ? "(#{character_b&.seed(@competition)}) #{character_b&.name}" : character_b&.name %></div>
 
             <div class="spacer">&nbsp;</div>
           <% end %>
@@ -138,7 +138,7 @@
 
             <div class="spacer">&nbsp;</div>
 
-            <div class="game game-top <%= previous_pick&.winner_id == character_a.id ? (previous_pick&.winner_id == match&.winner_id ? 'correct-pick' : 'incorrect-pick') : nil %>"><%= character_a&.seed(@competition) ? "(#{character_a&.seed(@competition)}) #{character_a&.name}" : character_a&.name %></div>
+            <div class="game game-top <%= previous_pick&.winner_id == character_a&.id ? (previous_pick&.winner_id == match&.winner_id ? 'correct-pick' : 'incorrect-pick') : nil %>"><%= character_a&.seed(@competition) ? "(#{character_a&.seed(@competition)}) #{character_a&.name}" : character_a&.name %></div>
 
             <div class="spacer">&nbsp;</div>
           <% end %>
@@ -148,7 +148,7 @@
           <% pick = @picks.find_by(pickable_id: match&.id) %>
           <% character = Character.find_by_id(pick&.winner_id) %>
           <div class="spacer">&nbsp;</div>
-          <div class="game game-top winner <%= pick&.winner_id == character.id ? (pick&.winner_id == match&.winner_id ? 'correct-pick' : 'incorrect-pick') : nil %>">
+          <div class="game game-top winner <%= pick&.winner_id == character&.id ? (pick&.winner_id == match&.winner_id ? 'correct-pick' : 'incorrect-pick') : nil %>">
             <div class="winner-title">
               WINNER!
             </div>
@@ -163,7 +163,7 @@
 
             <div class="spacer">&nbsp;</div>
 
-            <div class="game game-top <%= previous_pick&.winner_id == character_a.id ? (previous_pick&.winner_id == match&.winner_id ? 'correct-pick' : 'incorrect-pick') : nil %>"><%= character_a&.seed(@competition) ? "(#{character_a&.seed(@competition)}) #{character_a&.name}" : character_a&.name %></div>
+            <div class="game game-top <%= previous_pick&.winner_id == character_a&.id ? (previous_pick&.winner_id == match&.winner_id ? 'correct-pick' : 'incorrect-pick') : nil %>"><%= character_a&.seed(@competition) ? "(#{character_a&.seed(@competition)}) #{character_a&.name}" : character_a&.name %></div>
 
             <div class="spacer">&nbsp;</div>
           <% end %>
@@ -176,9 +176,9 @@
 
             <div class="spacer">&nbsp;</div>
 
-            <div class="game game-top <%= 'winner' if pick&.winner_id == character_a&.id %> <%= pick&.winner_id == character_a.id ? (pick&.winner_id == match&.winner_id ? 'correct-pick' : 'incorrect-pick') : nil %>"><%= character_a&.seed(@competition) ? "(#{character_a&.seed(@competition)}) #{character_a&.name}" : character_a&.name %></div>
+            <div class="game game-top <%= 'winner' if pick&.winner_id == character_a&.id %> <%= pick&.winner_id == character_a&.id ? (pick&.winner_id == match&.winner_id ? 'correct-pick' : 'incorrect-pick') : nil %>"><%= character_a&.seed(@competition) ? "(#{character_a&.seed(@competition)}) #{character_a&.name}" : character_a&.name %></div>
             <div class="game game-spacer">&nbsp;</div>
-            <div class="game game-bottom <%= 'winner' if pick&.winner_id == character_b&.id %> <%= pick&.winner_id == character_b.id ? (pick&.winner_id == match&.winner_id ? 'correct-pick' : 'incorrect-pick') : nil %>"><%= character_b&.seed(@competition) ? "(#{character_b&.seed(@competition)}) #{character_b&.name}" : character_b&.name %></div>
+            <div class="game game-bottom <%= 'winner' if pick&.winner_id == character_b&.id %> <%= pick&.winner_id == character_b&.id ? (pick&.winner_id == match&.winner_id ? 'correct-pick' : 'incorrect-pick') : nil %>"><%= character_b&.seed(@competition) ? "(#{character_b&.seed(@competition)}) #{character_b&.name}" : character_b&.name %></div>
 
             <div class="spacer">&nbsp;</div>
           <% end %>
@@ -191,9 +191,9 @@
 
             <div class="spacer">&nbsp;</div>
 
-            <div class="game game-top <%= 'winner' if pick&.winner_id == character_a&.id %> <%= pick&.winner_id == character_a.id ? (pick&.winner_id == match&.winner_id ? 'correct-pick' : 'incorrect-pick') : nil %>"><%= character_a&.seed(@competition) ? "(#{character_a&.seed(@competition)}) #{character_a&.name}" : character_a&.name %></div>
+            <div class="game game-top <%= 'winner' if pick&.winner_id == character_a&.id %> <%= pick&.winner_id == character_a&.id ? (pick&.winner_id == match&.winner_id ? 'correct-pick' : 'incorrect-pick') : nil %>"><%= character_a&.seed(@competition) ? "(#{character_a&.seed(@competition)}) #{character_a&.name}" : character_a&.name %></div>
             <div class="game game-spacer">&nbsp;</div>
-            <div class="game game-bottom <%= 'winner' if pick&.winner_id == character_b&.id %> <%= pick&.winner_id == character_b.id ? (pick&.winner_id == match&.winner_id ? 'correct-pick' : 'incorrect-pick') : nil %>"><%= character_b&.seed(@competition) ? "(#{character_b&.seed(@competition)}) #{character_b&.name}" : character_b&.name %></div>
+            <div class="game game-bottom <%= 'winner' if pick&.winner_id == character_b&.id %> <%= pick&.winner_id == character_b&.id ? (pick&.winner_id == match&.winner_id ? 'correct-pick' : 'incorrect-pick') : nil %>"><%= character_b&.seed(@competition) ? "(#{character_b&.seed(@competition)}) #{character_b&.name}" : character_b&.name %></div>
 
             <div class="spacer">&nbsp;</div>
           <% end %>
@@ -206,9 +206,9 @@
 
             <div class="spacer">&nbsp;</div>
 
-            <div class="game game-top <%= 'winner' if pick&.winner_id == character_a&.id %> <%= pick&.winner_id == character_a.id ? (pick&.winner_id == match&.winner_id ? 'correct-pick' : 'incorrect-pick') : nil %>"><%= character_a&.seed(@competition) ? "(#{character_a&.seed(@competition)}) #{character_a&.name}" : character_a&.name %></div>
+            <div class="game game-top <%= 'winner' if pick&.winner_id == character_a&.id %> <%= pick&.winner_id == character_a&.id ? (pick&.winner_id == match&.winner_id ? 'correct-pick' : 'incorrect-pick') : nil %>"><%= character_a&.seed(@competition) ? "(#{character_a&.seed(@competition)}) #{character_a&.name}" : character_a&.name %></div>
             <div class="game game-spacer">&nbsp;</div>
-            <div class="game game-bottom <%= 'winner' if pick&.winner_id == character_b&.id %> <%= pick&.winner_id == character_b.id ? (pick&.winner_id == match&.winner_id ? 'correct-pick' : 'incorrect-pick') : nil %>"><%= character_b&.seed(@competition) ? "(#{character_b&.seed(@competition)}) #{character_b&.name}" : character_b&.name %></div>
+            <div class="game game-bottom <%= 'winner' if pick&.winner_id == character_b&.id %> <%= pick&.winner_id == character_b&.id ? (pick&.winner_id == match&.winner_id ? 'correct-pick' : 'incorrect-pick') : nil %>"><%= character_b&.seed(@competition) ? "(#{character_b&.seed(@competition)}) #{character_b&.name}" : character_b&.name %></div>
 
             <div class="spacer">&nbsp;</div>
           <% end %>
@@ -225,13 +225,13 @@
 
             <div class="spacer">&nbsp;</div>
 
-            <div class="game game-top <%= 'winner' if pick.winner_id == character_a.id %> <%= pick&.winner_id == character_a.id ? (pick&.winner_id == match&.winner_id ? 'correct-pick' : 'incorrect-pick') : nil %>">
+            <div class="game game-top <%= 'winner' if pick.winner_id == character_a&.id %> <%= pick&.winner_id == character_a&.id ? (pick&.winner_id == match&.winner_id ? 'correct-pick' : 'incorrect-pick') : nil %>">
               <%= "(#{character_a.seed(@competition)}) #{character_a&.name}" %>
               <%= image_tag "spark-madness/#{character_a_asset_name}.jpg" %>
             </div>
             <div class="game game-spacer">&nbsp;
             </div>
-            <div class="game game-bottom <%= 'winner' if pick.winner_id == character_b.id %> <%= pick&.winner_id == character_b.id ? (pick&.winner_id == match&.winner_id ? 'correct-pick' : 'incorrect-pick') : nil %>">
+            <div class="game game-bottom <%= 'winner' if pick.winner_id == character_b&.id %> <%= pick&.winner_id == character_b&.id ? (pick&.winner_id == match&.winner_id ? 'correct-pick' : 'incorrect-pick') : nil %>">
               <%= "(#{character_b.seed(@competition)}) #{character_b&.name}" %>
               <%= image_tag "spark-madness/#{character_b_asset_name}.jpg" %>
             </div>
