--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -105,6 +105,11 @@
                   <p class="event-button">Mythic Championship II (April 26-28)</p>
                 </a>
               </div>
+              <div class="event-container">
+                <a href="/games/mtg/competitions/" class="homepage-event-link">
+                  <p class="event-button">Mythic Championship III (TBD)</p>
+                </a>
+              </div>
             </div>
           </div>
         </div>
