--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -102,12 +102,17 @@
               <h3>Upcoming Events</h3>
               <div class="event-container">
                 <a href="/games/mtg/competitions/" class="homepage-event-link">
-                  <p class="event-button">Mythic Championship II (April 26-28)</p>
+                  <p class="event-button">Mythic Championship III (June 21-23)</p>
                 </a>
               </div>
               <div class="event-container">
                 <a href="/games/mtg/competitions/" class="homepage-event-link">
-                  <p class="event-button">Mythic Championship III (TBD)</p>
+                  <p class="event-button">Mythic Championship IV (July 26-28)</p>
+                </a>
+              </div>
+              <div class="event-container">
+                <a href="/games/mtg/competitions/" class="homepage-event-link">
+                  <p class="event-button">Mythic Championship V (TBD)</p>
                 </a>
               </div>
             </div>
