--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -102,12 +102,7 @@
               <h3>Upcoming Events</h3>
               <div class="event-container">
                 <a href="/games/mtg/competitions/" class="homepage-event-link">
-                  <p class="event-button">Mythic Championship IV (July 26-28)</p>
-                </a>
-              </div>
-              <div class="event-container">
-                <a href="/games/mtg/competitions/" class="homepage-event-link">
-                  <p class="event-button">Mythic Championship V (TBD)</p>
+                  <p class="event-button">Mythic Championship VII (December 6-8)</p>
                 </a>
               </div>
             </div>
