--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -101,8 +101,23 @@
             <div class="cta-text-container">
               <h3>Upcoming Events</h3>
               <div class="event-container">
+                <a href="/games/mtg/competitions/WCXXVI/leagues" class="homepage-event-link">
+                  <p class="event-button">World Championship XXVI (February 14-16)</p>
+                </a>
+              </div>
+              <div class="event-container">
                 <a href="/games/mtg/competitions/" class="homepage-event-link">
-                  <p class="event-button">Mythic Championship VII (December 6-8)</p>
+                  <p class="event-button">Players Tour Finals Houston (April 24-26)</p>
+                </a>
+              </div>
+              <div class="event-container">
+                <a href="/games/mtg/competitions/" class="homepage-event-link">
+                  <p class="event-button">Players Tour Series 2 (May 1-10)</p>
+                </a>
+              </div>
+              <div class="event-container">
+                <a href="/games/mtg/competitions/" class="homepage-event-link">
+                  <p class="event-button">Mythic Invitational Ikoria (May 14-17)</p>
                 </a>
               </div>
             </div>
